--- a/css/main.css
+++ b/css/main.css
@@ -3,20 +3,118 @@
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+html,body {
+    height:100%;
+    padding:0;
+    margin:0;
+}
+.container {
+  width: 100%;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.navbar-inverse {
+  background: linear-gradient(to bottom, #ba4902 0px, #dd9839 100%);
+  border: none;
+}
+.navbar-inverse .navbar-brand {
+  color: #fff;
+}
+.navbar > .container .navbar-brand {
+  margin-left: 15px;
+}
+.navbar-toggle {
+  margin-right: 30px;
+}
+
+
+
+.jumbotron {
+  position: relative;
+  background-image: url(../img/background.jpg);
+  background-size: 100%;
+  background-position: center 60%;
+  height: calc(100%/2 + 100px);
+  padding: 50px 0 0 0;
+  margin: 0 0 20px 0;
+  -webkit-transition: 1s ease-in-out;
+  -o-transition: 1s ease-in-out;
+  transition: 1s ease-in-out;
+}
+.jumbotron:hover {
+  background-size: 110%;
+}
+.jumbotron-helper {
+  height: 100%;
+  background: none repeat scroll 0% 0% rgba(210, 187, 139, 0.6);
+  -webkit-transition: 1s ease-in-out;
+  -o-transition: 1s ease-in-out;
+  transition: 1s ease-in-out;
+}
+.jumbotron-helper:hover {
+  background: rgba(210, 187, 139, 0.4);
+}
+.jumbotron h1, .jumbotron p {
+  color: #fff;
+}
+.jumbotron h1 span.outside-title {
+  color:  #D1773F;
+}
+.jumbotron .container {
+  position: relative;
+  top: 50%;
+  margin: 0 auto;
+  -ms-transform: translateY(-50%); /* IE 9 */
+  -webkit-transform: translateY(-50%); /* Chrome, Safari, Opera */
+  transform: translateY(-50%);
+  text-align: center;
+}
+.jumbotron .guiding-btn {
+  position: absolute;
+  bottom: -60%;
+  right: 10%;
+}
+.jumbotron form {
+  position: absolute;
+  bottom: 0;
+  right: 5%;
+  display: none;
+}
+
+
+
+h2.subtitle {
+  text-align: center;
+  margin-bottom: 40px;
+}
+.usage-step .step {
+  text-align: center;
+}
+.usage-step .container {
+  height: 250px;
+}
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
+.description {
+  background-image: url(../img/desertkiss.jpg);
+  background-size: cover;
+  background-position: center center;
+  height: calc(100%/3);
+}
+.description blockquote {
+  border-left: none;
+  display: inline-block;
+}
+.description blockquote footer {
+  color: #FFE2B7;
+  text-align: right;
+}
+.description .container {
+  height: 250px;
+  
+  
+}
 
