--- a/css/main.css
+++ b/css/main.css
@@ -31,33 +31,42 @@ html,body {
 
 
 .jumbotron {
+  height: 100% !important;
   position: relative;
-  background-image: url(../img/background.jpg);
+  background-image: url(../img/background1.jpg);
   background-size: 100%;
   background-position: center 60%;
   height: calc(100%/2 + 100px);
   padding: 50px 0 0 0;
   margin: 0 0 20px 0;
-  -webkit-transition: 1s ease-in-out;
-  -o-transition: 1s ease-in-out;
-  transition: 1s ease-in-out;
+  -webkit-transition: 3s ease-in-out;
+  -o-transition: 3s ease-in-out;
+  transition: 3s ease-in-out;
 }
 .jumbotron:hover {
-  background-size: 110%;
+  /*background-size: 110%;*/
 }
 .jumbotron-helper {
   height: 100%;
   background: none repeat scroll 0% 0% rgba(210, 187, 139, 0.6);
-  -webkit-transition: 1s ease-in-out;
-  -o-transition: 1s ease-in-out;
-  transition: 1s ease-in-out;
+  -webkit-transition: 3s ease-in-out;
+  -o-transition: 3s ease-in-out;
+  transition: 3s ease-in-out;
 }
 .jumbotron-helper:hover {
-  background: rgba(210, 187, 139, 0.4);
+  background: rgba(210, 187, 139, 0.6);
 }
 .jumbotron h1, .jumbotron p {
   color: #fff;
 }
+.jumbotron h1 {
+  font-family: 'Lato', sans-serif;
+}
+.jumbotron p {
+  font-size: 35px;
+/*  font-family: 'Slabo 13px', serif;*/
+}
+
 .jumbotron h1 span.outside-title {
   color:  #D1773F;
 }
@@ -70,18 +79,29 @@ html,body {
   transform: translateY(-50%);
   text-align: center;
 }
-.jumbotron .guiding-btn {
-  position: absolute;
-  bottom: -60%;
-  right: 10%;
-}
 .jumbotron form {
   position: absolute;
   bottom: 0;
   right: 5%;
   display: none;
 }
-
+.scary-word  {
+  font-family: 'Abril Fatface', cursive;
+  display: none;
+  font-size: 40px;
+  color: #f23838;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+.guiding-area {
+  -webkit-transition: 3s ease-in-out;
+  -o-transition: 3s ease-in-out;
+  transition: 3s ease-in-out;
+}
 
 
 h2.subtitle {
