landing page final
landing page final

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ html,body {
 }
 
 .navbar-inverse {
-  background: linear-gradient(to bottom, #ba4902 0px, #dd9839 100%);
+  background: linear-gradient(to bottom, #EC6713 0px, #EC6713 100%);
   border: none;
 }
 .navbar-inverse .navbar-brand {
